--- a/src/main/resources/protox.yaml
+++ b/src/main/resources/protox.yaml
@@ -1,10 +1,12 @@
-listen: 8080
+#listen: 8080
+listen: 8443
+
 #server-cert:
 #server-key:
 rules:
   -
-    match: 127.0.0.1
-    forward: https://127.0.0.1:9090
+    match: https://tpan.bingosoft.net
+    forward: https://10.201.76.90
 #  -
 #    match: 'gg.local.protox.me'
 #    forward: 'https://ipv4.google.com'
